fixed overflow y in calendar

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -27,7 +27,9 @@
 
 @import "semantic-ui";
 
-
+.fc-scroller.fc-day-grid-container {
+  overflow-y: hidden !important;
+}
 
 h1 {
   font-weight: 100 !important;
